# AstraBrew-Launcher-Win

./: .gitignore  Cargo.toml  README.md  build  build.bat  build.ps1  build.rs
.docs/: Github连通性测试.md  版本管理.md  设置页面.md  酒馆配置.md
.trae/rules/: 规范.md
.workbuddy/memory/: 2026-05-15.md  MEMORY.md
data/: settings.json
icons/: icon.icns
scripts/: build.bat  build.ps1  gen_icon_ico.py
src/: main.rs  utils.rs
src/core/: app_permissions.rs  auto_launch.rs  desktop_webview.rs  env.rs  mod.rs  network.rs  process.rs  shell.rs  tavern_process.rs  updater.rs
src/core/settings/: autostart.rs  caddy.rs  env_detect.rs  git.rs  github_proxy.rs  mod.rs  nodejs.rs  pm2.rs  tavern.rs  webview2.rs
src/lang/: en.rs  lang.rs  zh.rs
src/pages/: access_tavern_popup.rs  console.rs  extensions.rs  home.rs  mod.rs  resource_manage.rs  reverse_proxy_popup.rs  settings.rs  tavern_config.rs  version_manage.rs
src/ui/: mod.rs  notification.rs  segmented.rs  switch.rs  toast.rs
