[package]
name = "astrabrew-launcher-win"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
egui = "0.33"
egui-phosphor = "0.11"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
tokio = { version = "1.52.3", features = ["full"] }
winreg = "0.55"
once_cell = "1.21"
zip = "8.6.0"
rfd = "0.15"
jwalk = "0.8"
