[package]
name = "astrabrew-launcher-win"
version = "0.0.1"
edition = "2024"

[package.metadata.packager]
productName = "AstraBrew Launcher"
identifier = "cn.astrabrew.launcher"
outDir = "dist"


[dependencies]
eframe = { version = "0.33", features = ["default"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
egui-phosphor = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rfd = "0.15"
jwalk = "0.8"
zip = "2"
# 二维码生成（访问酒馆弹窗）
qrcode = "0.14"
# Windows 注册表操作
winreg = "0.54"